# cobranza-whatsapp

./: .gitignore  README.md  pyproject.toml  seguridad.md
src/app/: main.py
src/app/auth/: auth_routes.py  dependencies.py  jwt.py  security.py
src/app/automation/: cobranza_job.py  scheduler.py
src/app/controllers/: cliente_controller.py  configuracion_controller.py  health_controller.py  pago_controller.py
src/app/database/: connection.py
src/app/middleware/: cors.py
src/app/models/: cliente.py  configuracion.py  pago.py
src/app/routes/: api.py  auth_routes.py  cliente_routes.py  configuracion_routes.py  health_routes.py  pago_routes.py
src/app/schemas/: client_schema.py  configuracion_schema.py  pago_schema.py
src/app/services/: recordatorio_service.py
