[project]
name = "cobranza-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=4.0.0",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
